- added working calculator - fixed issue with small paragraph fonts - fixed featured listings cards now they're align

--- a/style.css
+++ b/style.css
@@ -1,3 +1,13 @@
+body{
+    font-family: inter;
+}
+
+form{
+    display: table;
+}
+p     { display: table-row;  }
+label { display: table-cell; }
+input { display: table-cell; }
 .container-width{
     max-width: 1400px;
     margin: 0 auto;
@@ -62,13 +72,17 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    margin-top: 40px;
 }
     .testimony-card-container{
         display: grid;
         grid-template-columns: repeat(3, 1fr);
-        gap: 10px;
+        gap: 20px;
     }
         .testimony-cards{
+            display: grid;
+            grid-template-rows: 1fr auto;
+
             background-color: #D9D9D9;
             text-align: center;
             font-size: 20px;
@@ -76,6 +90,11 @@
             box-shadow: 0 4px 4px #562248;
             padding: 30px;
         }
+            .testimony-header-margin{
+                display: flex;
+                justify-content: center;
+                align-items: center;
+            }
 
 .options-container{
     display: flex;
@@ -84,18 +103,19 @@
     align-items: center;
     justify-content: center;
 }
+    .next-step-paragraph{
+        margin-top: 0;
+        font-size: 30px;
+    }
     .option-card-container{
         display: grid;
         grid-template-columns: repeat(3, 1fr);
         grid-template-rows: auto 1fr;
         width: 100%;
+        gap: 30px;
     }
         .buy-card-image-sizing{
             width: 168px;
-        }
-        .card-spacing{
-            margin-left: 40px;
-            margin-right: 40px;
         }
     .option-card-header-container{
         grid-row: 1;
@@ -131,17 +151,56 @@
 .featued-listings-container{
     display: flex;
     flex-direction: column;
-
+    margin-top: 50px;
+    margin-bottom: 50px;
     justify-content: center;
     align-items: center;
 }
     .featued-listings-cards-container{
         display: grid;
         grid-template-columns: repeat(3, 1fr);
+        gap: 40px;
+        margin-bottom: 50px;
     }
+    .featured-card-paragraph-grid{
+        display: grid;
+        padding: 10px;
+        text-align: center;
+        grid-template-rows: 1fr auto auto;
+    }
+    .featured-listing-cards{
+            background-color: #D9D9D9;
+            text-align: center;
+            font-size: 20px;
+            font-weight: bold;
+            box-shadow: 0 4px 4px #562248;
+    }
+    .featured-listing-paragraph-margins{
+        padding: 10px;
+    }
+        .view-button{
+            font-size: 20px;
+            font-weight: 500;
+            width: 70px;
+            height: 34px;
+            font-size: larger;
+            margin-bottom: 30px;
+            margin-top: 0;
+            border: black solid 1px;
+        }
+        .view-button-margins{
+            display: flex;
+            justify-content: left;
+            margin-left: 20px;
+        }
+        .featured-listing-card-image-sizing{
+            width: 100%;
+            margin-bottom: 15px;
+        }
     .featured-listing-claims{
         display: flex;
         justify-content: center;
+        text-align: center;
     }
     .featured-in-logo-container{
         display: grid;
@@ -153,28 +212,72 @@
 
 .footer-page-container{
     display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: repeat(2, 1fr);
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: repeat(2, auto);
     margin-top: 100px;
 }
     .calculator-container{
-
+        grid-column: 1;
+        grid-row: 1/3;
+        font-size: 24px;
     }
+    .output-container{
+        border: black 1px solid;
+        width: 400px;
+    }
+    input[type="text"]{
+        font-size: 20px;
+    }
+        .smaller-text-box{
+            width: 100px;
+        }
     .loan-term-container{
         display: flex;
         gap: 20px;
     }
         .loan-term-container-style{
+            display: flex;
+            justify-content: center;
             background-color: #562248;
             color: white;
-            width: 60px;
+            width: 120px;
             padding: 5px;
             border-radius: 5px;
+            font-size: 25px;
         }
+    .footer-calculator{
+        grid-column: 1 ;
+        font-size: 42px;
+    }
+        .footer-calculator-header-margins{
+            margin-bottom: 0;
+            font-size: 28px;
+        }
+            .down-payment-header-container{
+                display: grid;
+                grid-template-columns: repeat(2, 1fr);
+                gap: 20px;
+                margin-bottom: 0;
+
+            }
+    .email-socialMedia-container{
+        display: grid;
+        grid-column: 2;
+
+        grid-template-columns: repeat(2, 1fr);
+    }
+    #message-container{
+        height: 200px;
+        width: 240px;
+    }
+    #footer-paragraph{
+        font-size: 24px;
+        font-weight:300;
+    }
 
 .footer-container{
     display: flex;
-    margin-top: 150px;
+    margin-top: 80px;
     flex-direction: column;
     background-color:#562248 ;
     color: white;
@@ -188,3 +291,4 @@
         margin-left: 40px;
         margin-right: 40px;
     }
+    
